Undo track number alignment, fix formatting and some selectors on linux

--- a/user.css
+++ b/user.css
@@ -41,8 +41,7 @@
   display: none;
 }
 /* cards */
-.main-cardImage-image, .main-cardImage-imageWrapper,
-.main-cardImage-imageWrapper div {
+.main-cardImage-image, .main-cardImage-imageWrapper, .main-cardImage-imageWrapper div {
   border-radius: var(--border-radius-2);
 }
 .main-card-card, .x-heroCategoryCard-HeroCategoryCard, .x-categoryCard-CategoryCard, .main-heroCard-card, .view-homeShortcutsGrid-shortcut, .view-homeShortcutsGrid-image {
@@ -253,10 +252,6 @@ button.switch {
 }
 .main-trackList-statusChangeUp {
   color: var(--green);
-}
-/* song number */
-.main-trackList-number {
-  left: -14px;
 }
 /* big thanks to CharlieS and harbassan for providing the svg */
 .main-trackList-playingIcon {
@@ -472,7 +467,7 @@ input:hover:not([disabled]):not(:active)~.x-toggle-indicatorWrapper {
 .now-playing-bar .cover-art-image {
   border-radius: var(--border-radius-2);
 }
-.playback-bar__progress-time-elapsed, .main-playbackBarRemainingTime-container {
+.playback-bar__progress-time, .playback-bar__progress-time-elapsed, .main-playbackBarRemainingTime-container {
   position: absolute;
   bottom: -48px;
   right: 250px;
@@ -481,7 +476,7 @@ input:hover:not([disabled]):not(:active)~.x-toggle-indicatorWrapper {
 .playback-bar__progress-time-elapsed:first-child {
   margin-right: 42px;
 }
-.playback-bar__progress-time-elapsed:first-child::after {
+.playback-bar__progress-time, .playback-bar__progress-time-elapsed:first-child::after {
   content: " /";
 }
 .progress-bar__slider {
